--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
 <div class="row uniform 50%">
 <div class="8u 12u(mobilep)">
 <input type="email" name="_replyto" id="email" placeholder="Email Address"/>
-<input type="hidden" name="_next" value="//zypp.io/thanks.html" />
+<input type="hidden" name="_next" value="http://zyppio.github.io//thanks.html" />
 
 </div>
 						<div class="6u 12u$(medium)">
