--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
 								</li>
 								<li>
 									<h4 class="icon fa-envelope"><span class="label">Email</span></h4>
-									<a href="#">hello@ZYPP.io</a>
+									<a href="mailto:hello@zypp.io?Subject=Hello">hello@ZYPP.io</a>
 								</li>
 								
 							</ul>
